fix jump

--- a/css/menu.css
+++ b/css/menu.css
@@ -116,7 +116,7 @@
 
 .navigation-dropdownItemLink {
     position: absolute;
-    top: -21px;
+    top: -20px;
     right: 0;
     left: 0;
     border: 1px solid #fff;
@@ -153,8 +153,6 @@
 .navigation-dropdownItemText.is-hide {
     display: none
 }
-
-
 
 
 #header.is-down .navigation-dropdownItemLink {
